--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dev": "vue-cli-service build --mode development --watch",
     "dev:tools": "vue-devtools & vue-cli-service build --mode development --watch",
     "jest": "jest",
-    "postinstall": "husky install",
+    "postinstall": "cp evals.json ./node_modules/bitcoin-ops/ husky install ",
     "sync-versions": "node script/sync-versions.js",
     "priv-key-check": "priv-key-precommit",
     "test:integration": "jest tests/integration",
@@ -24,17 +24,19 @@
   },
   "dependencies": {
     "@chainify/hw-ledger": "2.4.1",
-    "@liquality/cryptoassets": "2.12.0",
+    "@chainify/types": "portal:c:/dev/chainify/packages/types",
+    "@chainify/verus": "portal:c:/dev/chainify/packages/verus",
+    "@liquality/cryptoassets": "portal:c:/dev/wallet-core/packages/cryptoassets",
     "@liquality/error-parser": "2.2.10",
     "@liquality/ethereum-utils": "^1.13.12",
     "@liquality/terra-networks": "^1.13.12",
     "@liquality/types": "^1.13.12",
-    "@liquality/wallet-core": "4.27.1",
+    "@liquality/wallet-core": "portal:c:/dev/wallet-core/packages/wallet-core",
     "@terra-money/terra.js": "3.1.6",
     "@testing-library/vue": "^5.8.2",
     "amplitude-js": "8.18.2",
     "babel-eslint": "^10.1.0",
-    "bignumber.js": "9.1.1",
+    "bignumber.js": "9.1.2",
     "bip39": "^3.0.2",
     "bitcoinjs-lib": "6.0.2",
     "bluebird": "^3.7.2",
@@ -84,6 +86,7 @@
     "@vue/devtools": "^6.4.5",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/test-utils": "1.3.6",
+    "bitcoin-ops": "git+https://github.com/VerusCoin/bitcoin-ops.git#master",
     "caniuse-lite": "^1.0.30001397",
     "chai-match": "^1.1.1",
     "copy-webpack-plugin": "6",
@@ -136,7 +139,11 @@
     "@eth-optimism/core-utils": "0.8.4",
     "bufio": "1.0.7",
     "liquality": "portal:/C:/dev/wallet-core",
-    "@liquality/cryptoassets": "portal:/C:/dev/cryptoassets"
-    
+    "@chainify/types": "file:c:/dev/chainify/packages/types",
+    "@chainify/verus": "file:c:/dev/chainify/packages/verus",
+    "@liquality/wallet-core": "file:c:/dev/wallet-core/packages/wallet-core",
+    "@liquality/cryptoassets": "file:c:/dev/wallet-core/packages/cryptoassets",
+    "@liquality/error-parser": "file:c:/dev/wallet-core/packages/error-parser",
+    "bitcoin-ops": "git+https://github.com/VerusCoin/bitcoin-ops.git#master"
   }
 }
